--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,19 +28,7 @@
     crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
       crossorigin="anonymous"></script>
-      <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-      <script>
-        var OneSignal = window.OneSignal || [];
-        OneSignal.push(function() {
-          OneSignal.init({
-            appId: "3f3b2b6a-fbba-482c-b123-d428dcd0f32e",
-            notifyButton: {
-              enable: true,
-            },
-          });
-        });
-      </script>
-    <title>React App</title>
+    <title>Ping!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
